fixed project alignment

--- a/matthewrenda/client/src/index.css
+++ b/matthewrenda/client/src/index.css
@@ -69,7 +69,6 @@
     background-color: white;
     border-radius: 50px;
     border: 2px solid rgb(167, 167, 167);
-    border-radius: 10px;
     margin: 1vw;
 }
  .about-intro {
@@ -127,8 +126,8 @@
    background-position: center;
    background-size: cover;
    border-radius: 1vw;
-   margin-left:10vw;
-   margin-right:6vw;
+   margin-left: auto;
+  margin-right: auto;
    margin-bottom:3vw;
 }
 
@@ -139,9 +138,9 @@
     );
    background-size: cover;
    border-radius: 1vw;
-   margin-left:4vw;
-   margin-right:4vw;
    margin-bottom:3vw;
+   margin-left: auto;
+   margin-right: auto;
 }
 .yellow{
    background-color: rgb(248, 233, 161);
